# BaseConversion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-build.sh  cmake-clean.sh  exec.sh  readme.txt
Docs/: graph_legend.html
Docs/html/: annotated_dup.js  baseConversion_8h.html  baseConversion_8h__incl.dot  baseConversion_8h_source.html  classBaseConversion-members.html  classBaseConversion.html  classBaseConversion.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  main_8cpp.html  navtreeindex0.js
Docs/latex/: annotated.tex  baseConversion_8cpp.tex  baseConversion_8cpp.tex.tmp  baseConversion_8cpp__incl.dot  baseConversion_8h.tex  baseConversion_8h__dep__incl.dot  baseConversion_8h__incl.dot  classBaseConversion.tex  files.tex  main_8cpp.tex  main_8cpp__incl.dot  refman.tex
Project-Unit-Test/: CMakeLists.txt
docs/: annotated.html  baseConversion_8cpp.html  baseConversion_8cpp__incl.dot  baseConversion_8h.html  baseConversion_8h.js  baseConversion_8h__dep__incl.dot  baseConversion_8h_source.html  classBaseConversion-members.html  classBaseConversion.html  classBaseConversion.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  functions.html  functions_func.html  index.html  main_8cpp.html  main_8cpp__incl.dot  navtreedata.js  navtreeindex0.js
lib/: CMakeLists.txt  baseConversion.cpp
src/: CMakeLists.txt  E0  Formula.cpp  Formula.h  Makefile  baseConversion.cpp  baseConversion.h  main.cpp  run_clang_format.sh  static_check.sh
test/: BaseConversion-test.cpp  CMakeLists.txt  Formula-test.cpp
(+25 files in other folders)
